fix(istio): make ops-portal HTTPRoute rules conditional
dev 환경에서 ops-portal 서비스가 없어서 HTTPRoute가 Degraded 상태였음.
- ops-portal, ops-service rules를 opsPortal.enabled 조건부로 변경
- dev.yaml: opsPortal.enabled = false
- prod.yaml: opsPortal.enabled = true

--- a/k8s/helm/charts/istio-config/templates/httproute.yaml
+++ b/k8s/helm/charts/istio-config/templates/httproute.yaml
@@ -163,6 +163,7 @@ spec:
         - name: video-service
           port: 8004
 
+    {{- if .Values.istio.httpRoute.opsPortal.enabled }}
     - matches:
         - path:
             type: PathPrefix
@@ -176,12 +177,14 @@ spec:
       backendRefs:
         - name: ops-service
           port: 8005
+    {{- end }}
 
     # ==========================================================================
     # Ops Portal (/api/ops-portal/* → rewrite to / → ops-portal:80)
     # Admin Portal Frontend - React SPA (nginx serves from /)
     # CloudFront /api/* behavior를 통해 EKS로 라우팅됨
     # ==========================================================================
+    {{- if .Values.istio.httpRoute.opsPortal.enabled }}
     - matches:
         - path:
             type: PathPrefix
@@ -195,6 +198,7 @@ spec:
       backendRefs:
         - name: ops-portal
           port: 80
+    {{- end }}
 
     # ==========================================================================
     # MinIO Storage (/api/minio/* → rewrite to /minio/* → minio)
