fix(monitoring): OTEL tracing and span metrics pipeline
  - Fix OTEL gRPC endpoint (remove http:// prefix)
  - Fix Prometheus remote-write endpoint (add route-prefix)
  - Enable span metrics and service graph connectors
  - VirtualService: use uriRegexRewrite to fix double-slash

  Changes:
  - k8s/helm/environments/base.yaml: OTEL_EXPORTER_OTLP_ENDPOINT
  - k8s/helm/environments/localhost.yaml: prometheusRemoteWrite.endpoint
  - k8s/helm/charts/wealist-monitoring/values.yaml: endpoint comment
  - k8s/helm/charts/istio-config/templates/virtualservice.yaml: regex rewrite
  - k8s/helm/scripts/*/0.setup-cluster.sh: Istio Native Gateway

--- a/k8s/helm/charts/wealist-monitoring/values.yaml
+++ b/k8s/helm/charts/wealist-monitoring/values.yaml
@@ -615,7 +615,9 @@ otelCollector:
   connectors:
     # Prometheus Remote Write endpoint (for connector metrics)
     prometheusRemoteWrite:
-      endpoint: "http://prometheus:9090/api/v1/write"
+      # NOTE: Prometheus uses --web.route-prefix=/api/monitoring/prometheus
+      # So the remote write endpoint must include this prefix
+      endpoint: "http://prometheus:9090/api/monitoring/prometheus/api/v1/write"
       resourceToTelemetryConversion: true
 
     # Span Metrics Connector
