--- a/k8s/helm/environments/base.yaml
+++ b/k8s/helm/environments/base.yaml
@@ -162,8 +162,10 @@ shared:
     # OpenTelemetry Configuration (고정 설정만)
     # -------------------------------------------------------------------------
     # OTLP Exporter - 서비스에서 OTEL Collector로 traces 전송
-    OTEL_EXPORTER_OTLP_ENDPOINT: "http://otel-collector:4317"
+    # NOTE: gRPC 프로토콜은 http:// prefix 없이 host:port 형식 사용
+    OTEL_EXPORTER_OTLP_ENDPOINT: "otel-collector:4317"
     OTEL_EXPORTER_OTLP_PROTOCOL: "grpc"
+    OTEL_EXPORTER_OTLP_INSECURE: "true"
 
     # Trace Sampler type (비율은 환경별 설정)
     OTEL_TRACES_SAMPLER: "parentbased_traceidratio"
