--- a/k8s/helm/environments/localhost.yaml
+++ b/k8s/helm/environments/localhost.yaml
@@ -492,7 +492,8 @@ otelCollector:
     servicegraph:
       enabled: true
     prometheusRemoteWrite:
-      endpoint: "http://prometheus:9090/api/v1/write"
+      # NOTE: Prometheus uses --web.route-prefix=/api/monitoring/prometheus
+      endpoint: "http://prometheus:9090/api/monitoring/prometheus/api/v1/write"
 
 # Tempo - 분산 추적 백엔드 (Jaeger 대안)
 tempo:
