--- a/k8s/helm/charts/istio-addons/values.yaml
+++ b/k8s/helm/charts/istio-addons/values.yaml
@@ -16,12 +16,11 @@ imageRegistry: "" # "" = Docker Hub 직접 사용
 monitoringNamespace: ""
 
 # Kiali - Service Mesh Dashboard
-# Ambient 모드 지원을 위해 Kiali 2.x 필요
 kiali:
   enabled: true
   image:
     repository: quay.io/kiali/kiali
-    tag: v2.4 # Ambient 모드 지원을 위해 Kiali 2.x 사용
+    tag: v2.4
   service:
     type: ClusterIP
     port: 20001
