--- a/k8s/helm/charts/wealist-monitoring/templates/prometheus/alertrules-configmap.yaml
+++ b/k8s/helm/charts/wealist-monitoring/templates/prometheus/alertrules-configmap.yaml
@@ -195,7 +195,7 @@ data:
                 This may indicate network latency or large repository size.
 
   # =============================================================================
-  # Istio Ambient Alert Rules
+  # Istio Sidecar Alert Rules
   # =============================================================================
   istio-alerts.yml: |
     groups:
@@ -217,9 +217,9 @@ data:
                 This may indicate a connection storm or leak.
 
           # ---------------------------------------------------------------------
-          # Waypoint (L7) Alerts
+          # Sidecar Proxy (L7) Alerts
           # ---------------------------------------------------------------------
-          - alert: IstioWaypointHighErrorRate
+          - alert: IstioSidecarHighErrorRate
             expr: |
               (
                 sum(rate(istio_requests_total{response_code=~"5.*"}[5m]))
@@ -229,19 +229,19 @@ data:
             labels:
               severity: warning
             annotations:
-              summary: "High error rate through Istio Waypoint"
+              summary: "High error rate through Istio Sidecar"
               description: |
-                More than 5% of requests through Waypoint are returning 5xx errors.
+                More than 5% of requests through Sidecar proxy are returning 5xx errors.
                 Service: {{ `{{ $labels.destination_service }}` }}
 
-          - alert: IstioWaypointHighLatency
+          - alert: IstioSidecarHighLatency
             expr: |
               histogram_quantile(0.99, sum(rate(istio_request_duration_milliseconds_bucket[5m])) by (le, destination_service)) > 5000
             for: 10m
             labels:
               severity: warning
             annotations:
-              summary: "High latency through Istio Waypoint"
+              summary: "High latency through Istio Sidecar"
               description: |
                 Request p99 latency to {{ `{{ $labels.destination_service }}` }}
                 is above 5 seconds.
