fix(dev): ExternalSecrets 비활성화 (Kind 내부 DB 사용)
Dev 환경에서 ESO가 AWS Secrets Manager의 잘못된 값(172.17.0.1)을
가져와서 서비스들이 DB 연결 실패. Kind 클러스터 내부 postgres/redis
서비스를 사용하므로 ESO 비활성화하고 Helm 값 사용.

--- a/k8s/helm/environments/dev.yaml
+++ b/k8s/helm/environments/dev.yaml
@@ -47,10 +47,10 @@ securityContext:
 # -----------------------------------------------------------------------------
 # External Secrets Operator (ESO)
 # -----------------------------------------------------------------------------
-# ESO가 AWS Secrets Manager에서 wealist-shared-secret을 자동 생성
-# Helm chart에서 secret 생성을 건너뜀
+# Dev 환경: ESO 비활성화 (Kind 클러스터 내부 DB 사용)
+# Prod 환경: ESO가 AWS Secrets Manager에서 wealist-shared-secret을 자동 생성
 externalSecrets:
-  enabled: true
+  enabled: false
 
 # -----------------------------------------------------------------------------
 # Features
