--- a/k8s/helm/environments/dev.yaml
+++ b/k8s/helm/environments/dev.yaml
@@ -125,10 +125,25 @@ shared:
 
   # Shared Secrets (dev 환경용 - 프로덕션은 ExternalSecrets 사용)
   secrets:
+    # Database
+    DB_HOST: "postgres"
+    DB_PORT: "5432"
+    DB_USER: "wealist"
+    DB_USERNAME: "wealist"
     DB_PASSWORD: "wealist-dev-password"
+    DATABASE_URL: "postgresql://wealist:wealist-dev-password@postgres:5432/wealist?sslmode=disable"
+    POSTGRES_HOST: "postgres"
+    # Redis
+    REDIS_HOST: "redis"
     REDIS_PASSWORD: ""
+    SPRING_REDIS_HOST: "redis"
+    SPRING_REDIS_PASSWORD: ""
+    # Auth
     JWT_SECRET: "dev-jwt-secret-key-2024-wealist"
     INTERNAL_API_KEY: "dev-internal-key-2024"
+    # S3/MinIO
+    S3_ACCESS_KEY: "minioadmin"
+    S3_SECRET_KEY: "minioadmin"
 
 # -----------------------------------------------------------------------------
 # Ingress (Disabled - Istio Gateway)
