fix(istio): switch from K8s Gateway API to Istio Gateway for prod routing
  Problem:
  - K8s Gateway API + VirtualService 혼합 사용으로 외부 라우팅 404 반환
  - VirtualService는 Istio Gateway만 참조 가능 (K8s Gateway API와 호환 안됨)
  - Production에 Istio Ingress Gateway (Deployment/Service) 미설치

  Solution:
  - Add istio-ingressgateway ArgoCD Application (istio/gateway Helm chart)
  - Enable Istio Gateway in prod.yaml (k8sGateway.enabled: false)
  - Update gateway.yaml template with dynamic namespace/selector
  - Update virtualservice.yaml to reference Gateway dynamically
  - Remove gateway-httproute source from external-dns

  Files changed:
  - k8s/argocd/apps/prod/cluster-addons/istio-ingressgateway.yaml (new)
  - k8s/helm/environments/prod.yaml
  - k8s/helm/charts/istio-config/templates/gateway.yaml
  - k8s/helm/charts/istio-config/templates/virtualservice.yaml
  - k8s/argocd/apps/prod/cluster-addons/external-dns.yaml

--- a/k8s/argocd/apps/prod/cluster-addons/external-dns.yaml
+++ b/k8s/argocd/apps/prod/cluster-addons/external-dns.yaml
@@ -1,7 +1,8 @@
 # =============================================================================
 # External DNS (sync-wave: -1)
 # =============================================================================
-# Route53 자동 업데이트: Gateway API 리소스의 annotation 기반으로 DNS 레코드 관리
+# Route53 자동 업데이트: Service annotation 기반으로 DNS 레코드 관리
+# - istio-ingressgateway Service의 external-dns.alpha.kubernetes.io/hostname 사용
 # =============================================================================
 apiVersion: argoproj.io/v1alpha1
 kind: Application
@@ -31,14 +32,9 @@ spec:
         sources:
           - service
           - ingress
-          - gateway-httproute
         serviceAccount:
           create: true
           name: external-dns
-        # Gateway API 지원
-        extraArgs:
-          - "--gateway-namespace=istio-system"
-          - "--gateway-label-filter=gateway.networking.k8s.io/gateway-name=istio-ingressgateway"
   destination:
     server: https://kubernetes.default.svc
     namespace: external-dns
