fix(istio): add EnvoyFilter for X-Forwarded-Proto + remove cert-manager
   Problem:
   - NLB terminates TLS and forwards HTTP to Istio
   - Spring Boot auth-service doesn't know original was HTTPS
   - OAuth redirects use HTTP causing redirect loop (ERR_TOO_MANY_REDIRECTS)

   Solution:
   - Add EnvoyFilter to set X-Forwarded-Proto: https header
   - Spring Boot forward-headers-strategy: native now works correctly

   Cleanup:
   - Remove cert-manager (unused, ACM + NLB handles TLS)
   - Remove cert-manager-config Helm chart
   - Remove cert-manager from AppProject sourceRepos and destinations

--- a/k8s/helm/charts/istio-config/values.yaml
+++ b/k8s/helm/charts/istio-config/values.yaml
@@ -98,6 +98,12 @@ istio:
         cpu: 500m
         memory: 256Mi
 
+  # EnvoyFilter for X-Forwarded-Proto header
+  # Required when NLB terminates TLS and forwards HTTP to Istio
+  envoyFilter:
+    forwardedProto:
+      enabled: false  # Enable in prod where NLB terminates TLS
+
   # Istio Gateway (for VirtualService routing)
   # Requires istio-ingressgateway Deployment/Service to be installed separately
   gateway:
