chore(ci): remove video-service from CI workflows
  video-service is no longer in use. Remove references from:
  - ci-build-images.yaml (build matrix, Go services list)
  - ci-pr-validation.yaml (path filter, services list)
  - discord-update-production-image.yaml (service options)

--- a/.github/workflows/ci-build-images.yaml
+++ b/.github/workflows/ci-build-images.yaml
@@ -154,8 +154,6 @@ jobs:
               - 'services/storage-service/**'
             user-service:
               - 'services/user-service/**'
-            video-service:
-              - 'services/video-service/**'
             ops-service:
               - 'services/ops-service/**'
             ops-portal:
@@ -171,13 +169,13 @@ jobs:
               SERVICES=$(echo '${{ github.event.inputs.services }}' | jq -cR 'split(",") | map(gsub("^\\s+|\\s+$";"")) | map(select(. != "frontend"))')
               echo "Manual trigger with services: ${SERVICES}"
             else
-              SERVICES='["auth-service","board-service","chat-service","noti-service","storage-service","user-service","video-service","ops-service","ops-portal"]'
+              SERVICES='["auth-service","board-service","chat-service","noti-service","storage-service","user-service","ops-service","ops-portal"]'
               echo "Manual trigger: building all services"
             fi
           # 공통 패키지 변경 시 모든 Go 서비스 빌드
           elif [ "${{ steps.filter.outputs.common-package }}" = "true" ]; then
             # 공통 패키지만 변경된 경우 모든 Go 서비스 (ops-service 포함)
-            GO_SERVICES='["board-service","chat-service","noti-service","storage-service","user-service","video-service","ops-service"]'
+            GO_SERVICES='["board-service","chat-service","noti-service","storage-service","user-service","ops-service"]'
             # 다른 서비스도 변경되었으면 병합
             OTHER_CHANGES='${{ steps.filter.outputs.changes }}'
             if [ "${OTHER_CHANGES}" != "[]" ] && [ -n "${OTHER_CHANGES}" ]; then
@@ -258,7 +256,7 @@ jobs:
               DOCKERFILE="services/${SERVICE}/Dockerfile"
               CONTEXT="services/${SERVICE}"
               ;;
-            "board-service"|"chat-service"|"noti-service"|"storage-service"|"user-service"|"video-service"|"ops-service")
+            "board-service"|"chat-service"|"noti-service"|"storage-service"|"user-service"|"ops-service")
               DOCKERFILE="services/${SERVICE}/docker/Dockerfile"
               CONTEXT="."
               ;;
