fix(auth-service): use separate OTEL endpoint env var with full path
  Spring Boot OTLP exporter requires full path (/v1/traces) unlike Go SDK
  which auto-appends it. Using OTEL_EXPORTER_OTLP_TRACES_ENDPOINT to avoid
  conflicts with Go services.

--- a/k8s/helm/environments/base.yaml
+++ b/k8s/helm/environments/base.yaml
@@ -165,6 +165,8 @@ shared:
     # - Go, Java, Python 등 모든 SDK에서 동일한 endpoint 사용
     # - Firewall 친화적, 디버깅 용이
     OTEL_EXPORTER_OTLP_ENDPOINT: "http://otel-collector:4318"
+    # Spring Boot OTLP exporter needs full path (SDK doesn't auto-append /v1/traces)
+    OTEL_EXPORTER_OTLP_TRACES_ENDPOINT: "http://otel-collector:4318/v1/traces"
     OTEL_EXPORTER_OTLP_PROTOCOL: "http/protobuf"
 
     # Trace Sampler type (비율은 환경별 설정)
