--- a/services/auth-service/src/main/resources/application.yml
+++ b/services/auth-service/src/main/resources/application.yml
@@ -143,4 +143,6 @@ management:
       probability: ${OTEL_TRACES_SAMPLER_ARG:1.0}
   otlp:
     tracing:
-      endpoint: ${OTEL_EXPORTER_OTLP_ENDPOINT:http://otel-collector:4318/v1/traces}
+      # Spring Boot needs full path with /v1/traces (unlike Go SDK which adds it automatically)
+      # Use separate env var to avoid conflict with Go services' OTEL_EXPORTER_OTLP_ENDPOINT
+      endpoint: ${OTEL_EXPORTER_OTLP_TRACES_ENDPOINT:http://otel-collector:4318/v1/traces}
