--- a/k8s/helm/charts/istio-config/templates/virtualservice.yaml
+++ b/k8s/helm/charts/istio-config/templates/virtualservice.yaml
@@ -288,7 +288,30 @@ spec:
     - destination:
         host: ops-service
         port:
-          number: 8090
+          number: 8005
+    timeout: 30s
+    retries:
+      attempts: 3
+      perTryTimeout: 10s
+      retryOn: "5xx,reset,connect-failure"
+  {{- end }}
+
+  # ==========================================================================
+  # Ops Portal (if enabled) - Admin Dashboard Frontend
+  # ==========================================================================
+  {{- if and $vs.opsPortal $vs.opsPortal.enabled }}
+  - match:
+    - uri:
+        prefix: /api/ops-portal
+    rewrite:
+      uriRegexRewrite:
+        match: "^/api/ops-portal(.*)$"
+        rewrite: '\1'
+    route:
+    - destination:
+        host: ops-portal
+        port:
+          number: 80
     timeout: 30s
     retries:
       attempts: 3
