--- a/k8s/helm/charts/auth-service/templates/deployment.yaml
+++ b/k8s/helm/charts/auth-service/templates/deployment.yaml
@@ -31,6 +31,8 @@ spec:
         {{- include "wealist-common.selectorLabels" . | nindent 8 }}
         {{/* Version label for DestinationRule subset matching */}}
         version: stable
+        {{/* Required by Kyverno policy for prod namespace */}}
+        stage: {{ .Values.stage | default "prod" }}
       annotations:
         {{- if .Values.podAnnotations }}
         {{- toYaml .Values.podAnnotations | nindent 8 }}
