--- a/k8s/helm/environments/dev.yaml
+++ b/k8s/helm/environments/dev.yaml
@@ -219,6 +219,7 @@ istio:
   virtualService:
     enabled: false
 
+  # Istio Gateway (networking.istio.io) 비활성화 - Gateway API 사용
   gateway:
     enabled: false
     name: wealist-gateway
@@ -227,6 +228,28 @@ istio:
       - "api.dev.wealist.co.kr"
     tls:
       enabled: false
+
+  # Kubernetes Gateway API - HTTPRoute가 참조하는 Gateway
+  # Istio가 자동으로 Deployment/Service 생성
+  k8sGateway:
+    enabled: true
+    name: istio-ingressgateway
+    namespace: istio-system
+    gatewayClassName: istio
+    # Kind 클러스터용 NodePort 설정
+    infrastructure:
+      annotations:
+        # Istio가 생성하는 Service에 NodePort 타입 지정
+        networking.istio.io/service-type: NodePort
+      labels:
+        istio: ingressgateway
+    listeners:
+      http:
+        port: 80
+        allowedRoutes:
+          from: All
+      https:
+        enabled: false
 
   httpRoute:
     enabled: true
