fix(infra): Secret 업데이트 방지 버그 수정
- secret-shared.yaml 삭제 (lookup 함수가 기존 Secret 업데이트 방지)
- shared-secret.yaml만 사용하여 wealist-shared-secret 생성
- VIDEO_SERVICE_URL 조건부 포함으로 변경 (미정의 시 제외)

서비스들이 172.17.0.1 (Docker bridge)로 연결하던 문제 해결
- 원인: lookup 체크로 인해 ConfigMap/Secret 업데이트 안됨
- 해결: 중복 템플릿 제거로 항상 최신 값 적용

--- a/k8s/helm/charts/wealist-infrastructure/templates/shared-configmap.yaml
+++ b/k8s/helm/charts/wealist-infrastructure/templates/shared-configmap.yaml
@@ -18,7 +18,9 @@ data:
   CHAT_SERVICE_URL: {{ .Values.shared.config.CHAT_SERVICE_URL | quote }}
   NOTI_SERVICE_URL: {{ .Values.shared.config.NOTI_SERVICE_URL | quote }}
   STORAGE_SERVICE_URL: {{ .Values.shared.config.STORAGE_SERVICE_URL | quote }}
+  {{- if .Values.shared.config.VIDEO_SERVICE_URL }}
   VIDEO_SERVICE_URL: {{ .Values.shared.config.VIDEO_SERVICE_URL | quote }}
+  {{- end }}
   LIVEKIT_WS_URL: {{ .Values.shared.config.LIVEKIT_WS_URL | quote }}
 
   # Infrastructure URLs
