--- a/k8s/helm/environments/prod.yaml
+++ b/k8s/helm/environments/prod.yaml
@@ -539,9 +539,9 @@ argocd:
   metrics:
     enabled: true
 
-# k6 부하테스트 (Production에서 활성화)
+# k6 부하테스트 (테스트 시에만 수동 활성화)
 k6:
-  enabled: true
+  enabled: false  # 수동으로 테스트할 때만 true로 변경
   prometheus:
     # routePrefix 포함 필수 (/api/monitoring/prometheus)
     remoteWriteUrl: "http://prometheus:9090/api/monitoring/prometheus/api/v1/write"
